First landing page revision

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title></title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <style>
@@ -18,6 +18,9 @@
             }
         </style>
         <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
+        <link rel="stylesheet" href="css/themes/default/default.css"/>
+        <link rel="stylesheet" href="css/font-awesome.min.css"/>
+        <link rel="stylesheet" href="css/nivo-slider.css"/>
         <link rel="stylesheet" href="css/main.css">
 
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
@@ -27,8 +30,11 @@
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
 
-        <!-- This code is taken from http://twitter.github.com/bootstrap/examples/hero.html -->
+        <!-- This code is taken from http://twitter.GitHub.com/bootstrap/examples/hero.html -->
 
+        <div class="wrapper">
+
+            <a href="https://github.com/you"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub"></a>
         <div class="navbar navbar-inverse navbar-fixed-top">
             <div class="navbar-inner">
                 <div class="container">
@@ -37,75 +43,97 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>
-                    <a class="brand" href="#">Project name</a>
+                    <a class="brand" href="#">Gisto</a>
                     <div class="nav-collapse collapse">
                         <ul class="nav">
                             <li class="active"><a href="#">Home</a></li>
-                            <li><a href="#about">About</a></li>
-                            <li><a href="#contact">Contact</a></li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="#">Action</a></li>
-                                    <li><a href="#">Another action</a></li>
-                                    <li><a href="#">Something else here</a></li>
-                                    <li class="divider"></li>
-                                    <li class="nav-header">Nav header</li>
-                                    <li><a href="#">Separated link</a></li>
-                                    <li><a href="#">One more separated link</a></li>
-                                </ul>
-                            </li>
+                            <li><a href="#about">Download</a></li>
+                            <li><a href="#contact">About</a></li>
                         </ul>
-                        <form class="navbar-form pull-right">
-                            <input class="span2" type="text" placeholder="Email">
-                            <input class="span2" type="password" placeholder="Password">
-                            <button type="submit" class="btn">Sign in</button>
-                        </form>
                     </div><!--/.nav-collapse -->
                 </div>
             </div>
         </div>
 
-        <div class="container">
-
             <!-- Main hero unit for a primary marketing message or call to action -->
-            <div class="hero-unit">
-                <h1>Hello, world!</h1>
-                <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-                <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
-            </div>
+            <header class="row-fluid">
+                <div class="span8 offset2">
+
+                    <div class="span6">
+                        <h1>Gisto</h1>
+                        <p class="subtitle">Snippets made awesome</p>
+
+                        <div class="description">
+                            <p>Gisto is a snippets managment system that allows you and your team share code snippets
+                            fast and easily.</p>
+                            <p>Based on GitHub Gists Infrastructure which means you can use all your existing snippets by
+                            connecting your GitHub account!</p>
+                            <p>No connection needed! Gisto allows offline access of gists and updates automatically when
+                                a connection becomes available</p>
+                        </div>
+                    </div>
+
+                    <div class="slider-wrapper theme-default span6">
+                        <div id="slider" class="nivoSlider">
+                            <img src="img/screenshots/login.png" data-thumb="images/toystory.jpg" alt="" />
+                            <img src="img/screenshots/gists.png" data-thumb="images/toystory.jpg" alt="" />
+                        </div>
+                        <div id="htmlcaption" class="nivo-html-caption">
+                            <strong>This</strong> is an example of a <em>HTML</em> caption with <a href="#">a link</a>.
+                        </div>
+                    </div>
+
+                </div>
+            </header>
+
+            <section class="row-fluid bar">
+                <div class="span12 download-bar">
+                    <span class="download-text">Cross platform: Windows, OSX, Linux</span>
+                    <a class="btn btn-primary btn-large">Download Now &raquo;</a>
+                    <!--
+                    Gisto is still under development and is not yet available to download. Watch for updates.
+                    -->
+                </div>
+            </section>
+
+            <!--
+            <section class="row-fluid main-content">
+                <div class="span12">
+                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                </div>
+            </section>
+            -->
 
             <!-- Example row of columns -->
-            <div class="row">
-                <div class="span4">
-                    <h2>Heading</h2>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                    <p><a class="btn" href="#">View details &raquo;</a></p>
-                </div>
-                <div class="span4">
-                    <h2>Heading</h2>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                    <p><a class="btn" href="#">View details &raquo;</a></p>
-               </div>
-                <div class="span4">
-                    <h2>Heading</h2>
-                    <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                    <p><a class="btn" href="#">View details &raquo;</a></p>
+            <div class="row-fluid more-info">
+                <div class="container">
+                    <div class="span4">
+                        <h2><i class="icon-github"></i> GitHub Integration</h2>
+                        <p>Gisto works on GitHub infrastructure, everything you do at gisto is automatically updated at GitHub. </p>     <p>If you don't have access to your computer you can browse normally at GitHub to get all you need.</p>
+                    </div>
+                    <div class="span4">
+                        <h2><i class="icon-cloud"></i> Offline Access</h2>
+                        <p>Wanted to get a quick coding session done out of home and had no internet connection available?</p> <p>Gisto enables you to view offline your gists so you can use them on the go.  </p>
+                   </div>
+                    <div class="span4">
+                        <h2><i class="icon-bolt"></i> Quick Editing</h2>
+                        <p>Gisto contains rich code editors, for editing on the go just when you need that quick change and don't want to open your development environment.</p> <p>Drag and drog support for files right inside gisto! just drag files to the app to create a gist.</p>
+                    </div>
                 </div>
             </div>
 
-            <hr>
-
             <footer>
-                <p>&copy; Company 2012</p>
-            </footer>
 
-        </div> <!-- /container -->
+            </footer>
+        </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
 
         <script src="js/vendor/bootstrap.min.js"></script>
+        <script src="js/vendor/jquery.nivo.slider.pack.js"></script>
 
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
