--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <div class="wrapper">
 
-            <a href="https://github.com/you"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub"></a>
+            <a href="https://github.com/Gisto/gisto"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub"></a>
         <div class="navbar navbar-inverse navbar-fixed-top">
             <div class="navbar-inner">
                 <div class="container">
@@ -47,8 +47,8 @@
                     <div class="nav-collapse collapse">
                         <ul class="nav">
                             <li class="active"><a href="#">Home</a></li>
-                            <li><a href="#about">Download</a></li>
-                            <li><a href="#contact">About</a></li>
+                            <li><a href="#download">Download</a></li>
+                            <li><a href="#about">About</a></li>
                         </ul>
                     </div><!--/.nav-collapse -->
                 </div>
@@ -89,7 +89,7 @@
             <section class="row-fluid bar">
                 <div class="span12 download-bar">
                     <span class="download-text">Cross platform: Windows, OSX, Linux</span>
-                    <a class="btn btn-primary btn-large">Download Now &raquo;</a>
+                    <a class="btn btn-primary btn-large">Available soon <!--&raquo;--></a>
                     <!--
                     Gisto is still under development and is not yet available to download. Watch for updates.
                     -->
