Very small fixes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>&lt;/Gisto&gt; | Snippets made awesome</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -35,39 +35,39 @@
         <div class="wrapper">
 
             <a class="fork" href="https://github.com/Gisto/gisto"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub"></a>
-        <div class="navbar navbar-inverse navbar-fixed-top">
-            <div class="navbar-inner">
-                <div class="container">
-                    <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </a>
-                    <a class="brand" href="#">Gisto</a>
-                    <div class="nav-collapse collapse">
-                        <ul class="nav">
-                            <li class="active"><a href="#">Home</a></li>
-                            <li><a href="#download">Download</a></li>
-                            <li><a href="#about">About</a></li>
-                        </ul>
-                    </div><!--/.nav-collapse -->
+            <div class="navbar navbar-inverse navbar-fixed-top">
+                <div class="navbar-inner">
+                    <div class="container">
+                        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </a>
+                        <a class="brand" href="#">Gisto</a>
+                        <div class="nav-collapse collapse">
+                            <ul class="nav">
+                                <li class="active"><a href="#">Home</a></li>
+                                <li><a href="#download">Download</a></li>
+                                <li><a href="#about">About</a></li>
+                            </ul>
+                        </div><!--/.nav-collapse -->
+                    </div>
                 </div>
             </div>
-        </div>
 
             <!-- Main hero unit for a primary marketing message or call to action -->
             <header class="row-fluid">
                 <div class="span8 offset2">
 
                     <div class="span6">
-                        <h1>Gisto</h1>
+                        <h1>&lt;/Gisto&gt;</h1>
                         <p class="subtitle">Snippets made awesome</p>
 
                         <div class="description">
                             <p>Gisto is a snippets managment system that allows you and your team share code snippets
-                            fast and easily.</p>
+                                fast and easily.</p>
                             <p>Based on GitHub Gists Infrastructure which means you can use all your existing snippets by
-                            connecting your GitHub account!</p>
+                                connecting your GitHub account!</p>
                             <p>No connection needed! Gisto allows offline access of gists and updates automatically when
                                 a connection becomes available</p>
                         </div>
@@ -88,7 +88,7 @@
 
             <section class="row-fluid bar">
                 <div class="span12 download-bar">
-                    <span class="download-text">Cross platform: Windows, OSX, Linux</span>
+                    <span class="download-text">Cross-platform: Windows, OSX, Linux</span>
                     <a class="btn btn-primary btn-large">Available soon <!--&raquo;--></a>
                     <!--
                     Gisto is still under development and is not yet available to download. Watch for updates.
@@ -116,7 +116,7 @@
                     <div class="span4">
                         <h2><i class="icon-cloud"></i> Offline Access</h2>
                         <p>Wanted to get a quick coding session done out of home and had no internet connection available?</p> <p>Gisto enables you to view offline your gists so you can use them on the go.  </p>
-                   </div>
+                    </div>
                     <div class="span4">
                         <h2><i class="icon-bolt"></i> Quick Editing</h2>
                         <p>Gisto contains rich code editors, for editing on the go just when you need that quick change and don't want to open your development environment.</p> <p>Drag and drog support for files right inside gisto! just drag files to the app to create a gist.</p>
@@ -139,10 +139,17 @@
         <script src="js/main.js"></script>
 
         <script>
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+            (function(i, s, o, g, r, a, m) {
+                i['GoogleAnalyticsObject'] = r;
+                i[r] = i[r] || function() {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+                a = s.createElement(o),
+                        m = s.getElementsByTagName(o)[0];
+                a.async = 1;
+                a.src = g;
+                m.parentNode.insertBefore(a, m)
+            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
             ga('create', 'UA-39848301-1', 'github.com');
             ga('send', 'pageview');
