--- a/index.html
+++ b/index.html
@@ -1,161 +1,231 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!doctype html>
+<html lang="en">
+
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>&lt;/Gisto&gt; | Snippets made awesome</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="utf-8" />
+        <title>Gisto &middot; Snippets made awesome</title>
 
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <style>
-            body {
-                padding-top: 60px;
-                padding-bottom: 40px;
-            }
-        </style>
-        <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
-        <link rel="stylesheet" href="css/themes/default/default.css"/>
-        <link rel="stylesheet" href="css/font-awesome.min.css"/>
-        <link rel="stylesheet" href="css/nivo-slider.css"/>
-        <link rel="stylesheet" href="css/main.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+        <!-- 1140px Grid styles for IE -->
+        <!--[if lte IE 9]><link rel="stylesheet" href="css/ie.css" type="text/css" media="screen" /><![endif]-->
+
+        <!-- The 1140px Grid - http://cssgrid.net/ -->
+        <link rel="stylesheet" href="css/1140.css" type="text/css" media="screen" />
+
+        <!-- Your styles -->
+        <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="css/styles.css" type="text/css" media="screen" />
+        <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" media="screen" />
+
+        <!--css3-mediaqueries-js - http://code.google.com/p/css3-mediaqueries-js/ - Enables media queries in some unsupported browsers-->
+        <script type="text/javascript" src="js/css3-mediaqueries.js"></script>
+
     </head>
+
+
     <body>
-        <!--[if lt IE 7]>
-            <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
-        <![endif]-->
 
-        <!-- This code is taken from http://twitter.GitHub.com/bootstrap/examples/hero.html -->
 
-        <div class="wrapper">
+        <header class="container">
+            <div class="row">
+                <a href="/" class="threecol logo">
+                    <h1>&lt;/Gisto&gt;</h1>
+                </a>
+                <a href="#footer" class="threecol links">
+                    About
+                </a>
+                <a href="#features" class="threecol links">
+                    Features
+                </a>
 
-            <a class="fork" href="https://github.com/Gisto/gisto">
-                <img src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub">
-            </a>
-            <div class="navbar navbar-inverse navbar-fixed-top">
-                <div class="navbar-inner">
-                    <div class="container">
-                        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </a>
-                        <a class="brand" href="#">Gisto</a>
-                        <div class="nav-collapse collapse">
-                            <ul class="nav">
-                                <li class="active"><a href="#">Home</a></li>
-                                <li><a href="#download">Download</a></li>
-                                <li><a href="#about">About</a></li>
-                            </ul>
-                        </div><!--/.nav-collapse -->
-                    </div>
+                <a href="#contact" class="threecol links last">
+                    Contact
+                </a>
+            </div>
+        </header>
+
+        <div class="container hero">
+            <div class="row">
+                <div class="sixcol">
+                    <h1>Snippets made awesome</h1>
+                    <p>Gisto is a Cross-platform snippets management desktop application that allows you and your team share code snippets
+                        fast and easily.</p>
+                    <p>Based on GitHub Gists Infrastructure which means you can use all your existing snippets by
+                        connecting your GitHub account!</p>
+                    <a class="btn" href="#footer">Learn more </a>
+                </div>
+                <div class="sixcol last">
+                    <p>
+                        <img alt="Gisto" src="img/single-gist.png" />
+                    </p>
                 </div>
             </div>
-
-            <!-- Main hero unit for a primary marketing message or call to action -->
-            <header class="row-fluid">
-                <div class="span8 offset2">
-
-                    <div class="span6">
-                        <h1>&lt;/Gisto&gt;</h1>
-                        <p class="subtitle">Snippets made awesome</p>
-
-                        <div class="description">
-                            <p>Gisto is a snippets managment system that allows you and your team share code snippets
-                                fast and easily.</p>
-                            <p>Based on GitHub Gists Infrastructure which means you can use all your existing snippets by
-                                connecting your GitHub account!</p>
-                            <p>No connection needed! Gisto allows offline access of gists and updates automatically when
-                                a connection becomes available</p>
-                        </div>
-                    </div>
-
-                    <div class="slider-wrapper theme-default span6">
-                        <div id="slider" class="nivoSlider">
-                            <img src="img/screenshots/login.png" data-thumb="images/toystory.jpg" alt="" />
-                            <img src="img/screenshots/gists.png" data-thumb="images/toystory.jpg" alt="" />
-                        </div>
-                        <div id="htmlcaption" class="nivo-html-caption">
-                            <strong>This</strong> is an example of a <em>HTML</em> caption with <a href="#">a link</a>.
-                        </div>
-                    </div>
-
-                </div>
-            </header>
-
-            <section class="row-fluid bar">
-                <div class="span12 download-bar">
-                    <span class="download-text">Cross-platform: Windows, OSX, Linux</span>
-                    <a class="btn btn-primary btn-large">Available soon <!--&raquo;--></a>
-                    <!--
-                    Gisto is still under development and is not yet available to download. Watch for updates.
-                    -->
-                </div>
-            </section>
-
-            <!--
-            <section class="row-fluid main-content">
-                <div class="span12">
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                </div>
-            </section>
-            -->
-
-            <!-- Example row of columns -->
-            <div class="row-fluid more-info">
-                <div class="container">
-                    <div class="span4">
-                        <h2><i class="icon-github"></i> GitHub Integration</h2>
-                        <p>Gisto works on GitHub infrastructure, everything you do at gisto is automatically updated at GitHub. </p>     <p>If you don't have access to your computer you can browse normally at GitHub to get all you need.</p>
-                    </div>
-                    <div class="span4">
-                        <h2><i class="icon-cloud"></i> Offline Access</h2>
-                        <p>Wanted to get a quick coding session done out of home and had no internet connection available?</p> <p>Gisto enables you to view offline your gists so you can use them on the go.  </p>
-                    </div>
-                    <div class="span4">
-                        <h2><i class="icon-bolt"></i> Quick Editing</h2>
-                        <p>Gisto contains rich code editors, for editing on the go just when you need that quick change and don't want to open your development environment.</p> <p>Drag and drog support for files right inside gisto! just drag files to the app to create a gist.</p>
-                    </div>
-                </div>
-            </div>
-
-            <footer>
-
-            </footer>
         </div>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
+        <div class="container horizontal">
+            <div class="row">
+                <div class="twelvecol last">
+                    <p>
+                        <b>Gisto</b> will soon be avaliable on: Windows, OSX, Linux
+                    </p>
+                </div>
+            </div>
+        </div>
 
-        <script src="js/vendor/bootstrap.min.js"></script>
-        <script src="js/vendor/jquery.nivo.slider.pack.js"></script>
 
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+        <div class="container features" id="features">
+            <div class="row">
+                <div class="fourcol">
+                    <h1><i class="icon-github"></i> GitHub Integration:</h1>
+                    <p>
+                        <img alt="Gisto" src="img/Octocat.png" />
+                        Gisto works on GitHub infrastructure, everything you do at Gisto is automatically updated at GitHub.
+                    </p>
+                    <p>
+                        If you don't have access to your computer you can browse normally at GitHub to get all you need.
+                    </p>
+                </div>
+                <div class="fourcol">
+                    <h1><i class="icon-off"></i> Offline Access:</h1>
+                    <img alt="Gisto" src="img/offline.png" />
+                    <p>
+                        Wanted to get a quick coding session done out of home and had no Internet connection available?
+                    </p>
+                    <p>
+                        Gisto enables you to view offline your gists so you can use them on the go.
+                    </p>
+                </div>
+                <div class="fourcol last">
+                    <h1><i class="icon-bolt"></i> Quick Editing:</h1>
+                    <p>
+                        <img alt="Gisto" src="img/edit.png" />
+                        Gisto contains rich code editors, for editing on the go just when you need that quick change and don't want to open your development environment.
+                    </p>
+                    <p>
+                        Drag and drop support for files right inside Gisto! just drag files to the application to create a gist.
+                    </p>
+                </div>
+            </div>
 
-        <script>
-            (function(i, s, o, g, r, a, m) {
-                i['GoogleAnalyticsObject'] = r;
-                i[r] = i[r] || function() {
-                    (i[r].q = i[r].q || []).push(arguments)
-                }, i[r].l = 1 * new Date();
-                a = s.createElement(o),
-                        m = s.getElementsByTagName(o)[0];
-                a.async = 1;
-                a.src = g;
-                m.parentNode.insertBefore(a, m)
-            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+            <div class="row">
+                <div class="fourcol">
+                    <h1><i class="icon-tags"></i> Gist tagging:</h1>
+                    <img alt="Gisto" alt="Gisto" src="img/tagging.png" />
+                    <p>
+                        Gisto allows to tag each gist with unlimited number of tags.
+                    </p>
+                    <p>
+                        Tags can be used for simply sorting gist snippets into groups for what makes it easy to search and maintain.
+                    </p>
+                </div>
+                <div class="fourcol">
+                    <h1><i class="icon-search"></i> Search:</h1>
+                    <img alt="Gisto" src="img/edit.png" />
+                    <p>
+                        Gists can be filtered by search filter from within the application.
+                    </p>
+                    <p>
+                        Searching criteria may be gist's description, file name / extention, tag or by public/secret status of a gist.
+                    </p>
+                </div>
+                <div class="fourcol last">
+                    <h1><b class="lowercase"><i class="icon-angle-left"></i>/Gisto<i class="icon-angle-right"></i></b> made of:</h1>
+                    <img alt="Gisto" src="img/madeof.png" />
+                    <p>
+                        Gisto could not be exist without:
+                        <br>
+                        <a href="http://angularjs.org"><i>angular.js</i></a> - Superheroic JavaScript MVW Framework
+                        <br>
+                        <a href="http://nodejs.org/"><i>node.js</i></a> - Event-driven I/O server-side JavaScript environment based on V8
+                        <br>
+                        <a href="https://github.com/rogerwang/node-webkit" class="js-current-repository"><i>node-webkit</i></a> - enable a new way of writing applications with all Web technologies
+                    </p>
+                </div>
+            </div>
 
-            ga('create', 'UA-39848301-1', 'github.com');
-            ga('send', 'pageview');
+        </div>
 
-        </script>
+
+
+        <div class="container horizontal-bottom">
+            <div class="row">
+                <div class="twelvecol last">
+                    <p>
+                        <b>&copy; 2013 </b> Gisto
+                    </p>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="container footer" id="footer">
+            <div class="row">
+                <div class="sixcol">
+                    <h1>Application status</h1>
+                    <p class="light" >Gisto is not yet officially released to the public.
+                        It is currently heavily developed. Various features will be left out from the first realeas.</p>
+                    <p>We are planing to release first version very soon, and add features from a list as updates as fast as it'll be possible.</p>
+                </div>
+                <div class="sixcol last">
+                    <h1>Who and why</h1>
+                    <p class="light" >Gisto idea started as an attempt to fulfill the lack of syntax highlighted + cloud synchronized code snippet solution.</p>
+
+                    <p>
+                        Gisto developed by team of two web developers and uses totally standard web technologies like HTML5 and JavaScript.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+
+
+        <div class="container horizontal-bottom">
+            <div class="row">
+                <div class="twelvecol last">
+                    <p>
+                        Contact and info
+                    </p>
+                </div>
+            </div>
+        </div>
+
+
+
+
+        <div class="container contact" id="contact">
+            <div class="row">
+
+                <div class="onecol">
+                    <p class="light">
+                        <img src="https://secure.gravatar.com/avatar/3a615b34ef2060face8fcd481c6377e1?s=80" alt="Maayan" />
+                    </p>
+                </div>
+
+                <div class="fivecol">
+                    <h2>Maayan</h2>
+                    <p>
+                        Software developer based in Israel <br /> <a target="_blank" href="http://www.glikm.com">www.glikm.com</a> | <i class="icon-twitter"></i> <a target="_blank" href="https://twitter.com/MaayanGlikser">@MaayanGlikser</a></p>
+                </div>
+
+
+
+                <div class="onecol">
+                    <p class="light">
+                        <img src="https://secure.gravatar.com/avatar/7ddad1a9a1c8de452badaf82b6c30c76?s=80" alt="Sasha" />
+                    </p>
+                </div>
+
+                <div class="fivecol last">
+                    <h2>Sasha</h2>
+                    <p>
+                        Web designer/developer from Israel <br /> <a target="_blank" href="http://www.sanusart.com">www.sanusart.com</a> | <i class="icon-twitter"></i> <a target="_blank" href="https://twitter.com/sanusart">@sanusart</a></p>
+                </div>
+
+            </div>
+        </div>
+
+
     </body>
+
 </html>
