First design revision

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="row">
                 <div class="twelvecol last">
                     <p>
-                        <b>Gisto</b> will soon be avaliable on: Windows, OSX, Linux
+                        <b>Gisto</b> will soon be avaliable on: Windows, OSX and Linux
                     </p>
                 </div>
             </div>
@@ -121,25 +121,12 @@
                 </div>
                 <div class="fourcol">
                     <h1><i class="icon-search"></i> Search:</h1>
-                    <img alt="Gisto" src="img/edit.png" />
+                    <img alt="Gisto" src="img/search.png" />
                     <p>
                         Gists can be filtered by search filter from within the application.
                     </p>
                     <p>
                         Searching criteria may be gist's description, file name / extention, tag or by public/secret status of a gist.
-                    </p>
-                </div>
-                <div class="fourcol last">
-                    <h1><b class="lowercase"><i class="icon-angle-left"></i>/Gisto<i class="icon-angle-right"></i></b> made of:</h1>
-                    <img alt="Gisto" src="img/madeof.png" />
-                    <p>
-                        Gisto could not be exist without:
-                        <br>
-                        <a href="http://angularjs.org"><i>angular.js</i></a> - Superheroic JavaScript MVW Framework
-                        <br>
-                        <a href="http://nodejs.org/"><i>node.js</i></a> - Event-driven I/O server-side JavaScript environment based on V8
-                        <br>
-                        <a href="https://github.com/rogerwang/node-webkit" class="js-current-repository"><i>node-webkit</i></a> - enable a new way of writing applications with all Web technologies
                     </p>
                 </div>
             </div>
@@ -148,12 +135,10 @@
 
 
 
-        <div class="container horizontal-bottom">
+        <div class="container horizontal">
             <div class="row">
                 <div class="twelvecol last">
-                    <p>
-                        <b>&copy; 2013 </b> Gisto
-                    </p>
+                 
                 </div>
             </div>
         </div>
@@ -164,15 +149,15 @@
                 <div class="sixcol">
                     <h1>Application status</h1>
                     <p class="light" >Gisto is not yet officially released to the public.
-                        It is currently heavily developed. Various features will be left out from the first realeas.</p>
-                    <p>We are planing to release first version very soon, and add features from a list as updates as fast as it'll be possible.</p>
+                        It is currently heavily developed. Various features will be left out from the first release.</p>
+                    <p>We are planing to release the first version very soon and add new features as quickly as possible.</p>
                 </div>
                 <div class="sixcol last">
                     <h1>Who and why</h1>
-                    <p class="light" >Gisto idea started as an attempt to fulfill the lack of syntax highlighted + cloud synchronized code snippet solution.</p>
+                    <p class="light" >Gisto started as an attempt to fulfill the lack of a syntax highlighted and cloud synchronized code snippet solution.</p>
 
                     <p>
-                        Gisto developed by team of two web developers and uses totally standard web technologies like HTML5 and JavaScript.
+                        Gisto is developed by a team of two web developers and uses web standard technologies such as HTML5 and JavaScript.
                     </p>
                 </div>
             </div>
@@ -180,11 +165,11 @@
 
 
 
-        <div class="container horizontal-bottom">
+        <div class="container horizontal">
             <div class="row">
                 <div class="twelvecol last">
                     <p>
-                        Contact and info
+                        Who are we?
                     </p>
                 </div>
             </div>
@@ -203,7 +188,7 @@
                 </div>
 
                 <div class="fivecol">
-                    <h2>Maayan</h2>
+                    <h2>Maayan Glikser</h2>
                     <p>
                         Software developer based in Israel <br /> <a target="_blank" href="http://www.glikm.com">www.glikm.com</a> | <i class="icon-twitter"></i> <a target="_blank" href="https://twitter.com/MaayanGlikser">@MaayanGlikser</a></p>
                 </div>
@@ -217,7 +202,7 @@
                 </div>
 
                 <div class="fivecol last">
-                    <h2>Sasha</h2>
+                    <h2>Sasha Khamkov</h2>
                     <p>
                         Web designer/developer from Israel <br /> <a target="_blank" href="http://www.sanusart.com">www.sanusart.com</a> | <i class="icon-twitter"></i> <a target="_blank" href="https://twitter.com/sanusart">@sanusart</a></p>
                 </div>
