--- a/index.html
+++ b/index.html
@@ -75,21 +75,32 @@
 
 
         <div class="container features" id="features">
+
+
             <div class="row">
-                <div class="fourcol">
+                <div class="onecol"></div>
+                <div class="sixcol">
                     <h1><i class="icon-github"></i> GitHub Integration</h1>
                     <p>
-                        <img alt="Gisto" src="img/Octocat.png" />
                         Gisto works on GitHub infrastructure, everything you do at Gisto is automatically updated at GitHub.
                     </p>
                     <p>
                         If you don't have access to your computer you can browse normally at GitHub to get all you need.
                     </p>
                 </div>
+                <div class="fourcol last">
+                    <img alt="Gisto" src="img/Octocat.png" />
+                </div>
+                <div class="separator"></div>
+            </div>
 
+            <div class="row">
+                <div class="onecol"></div>
                 <div class="fourcol">
-                    <h1><i class="icon-tags"></i> Gist tagging</h1>
                     <img alt="Gisto" alt="Gisto" src="img/tagging.png" />
+                </div>
+                <div class="sixcol last">
+                    <h1><i class="icon-tags"></i> Gist tagging</h1>
                     <p>
                         Gisto allows to tag each gist with unlimited number of tags.
                     </p>
@@ -97,43 +108,57 @@
                         Tags can be used for simply sorting gist snippets into groups for what makes it easy to search and maintain.
                     </p>
                 </div>
+                <div class="separator"></div>
+            </div>
 
-                <div class="fourcol last">
+            <div class="row">
+                <div class="onecol"></div>
+                <div class="sixcol">
                     <h1><i class="icon-bolt"></i> Quick Editing</h1>
                     <p>
-                        <img alt="Gisto" src="img/edit.png" />
                         Gisto contains rich code editors, for editing on the go just when you need that quick change and don't want to open your development environment.
                     </p>
                     <p>
                         Drag and drop support for files right inside Gisto! just drag files to the application to create a gist.
                     </p>
                 </div>
+                <div class="fourcol last">
+                    <img alt="Gisto" src="img/edit.png" />
+                </div>
+                <div class="separator"></div>
             </div>
 
-            <div class="row align-center">
-                <div class="sixcol">
-                    <div class="eightcol">
-                        <h1><i class="icon-off"></i> Offline Access</h1>
-                        <img alt="Gisto" src="img/offline.png" />
-                        <p>
-                            Wanted to get a quick coding session done out of home and had no Internet connection available?
-                        </p>
-                        <p>
-                            Gisto enables you to view offline your gists so you can use them on the go.
-                        </p>
-                    </div>
+
+            <div class="row">
+                <div class="onecol"></div>
+                <div class="fourcol">
+                    <img alt="Gisto" src="img/offline.png" />
                 </div>
                 <div class="sixcol last">
-                    <div class="eightcol">
-                        <h1><i class="icon-search"></i> Search</h1>
-                        <img alt="Gisto" src="img/search.png" />
-                        <p>
-                            Gists can be filtered by search filter from within the application.
-                        </p>
-                        <p>
-                            Searching criteria may be gist's description, file name / extention, tag or by public/secret status of a gist.
-                        </p>
-                    </div>
+                    <h1><i class="icon-off"></i> Offline Access</h1>
+                    <p>
+                        Wanted to get a quick coding session done out of home and had no Internet connection available?
+                    </p>
+                    <p>
+                        Gisto enables you to view offline your gists so you can use them on the go.
+                    </p>
+                </div>
+                <div class="separator"></div>
+            </div>
+
+            <div class="row">
+                <div class="onecol"></div>
+                <div class="sixcol">
+                    <h1><i class="icon-search"></i> Search</h1>
+                    <p>
+                        Gists can be filtered by search filter from within the application.
+                    </p>
+                    <p>
+                        Searching criteria may be gist's description, file name / extention, tag or by public/secret status of a gist.
+                    </p>
+                </div>
+                <div class="fourcol last">
+                    <img alt="Gisto" src="img/search.png" />
                 </div>
             </div>
 
