--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         fast and easily.</p>
                     <p>Based on GitHub Gists Infrastructure which means you can use all your existing snippets by
                         connecting your GitHub account!</p>
-                    <a class="btn" href="#footer">Learn more </a>
+                    <a class="btn links" href="#footer">Learn more </a>
                 </div>
                 <div class="sixcol last">
                     <p>
@@ -230,6 +230,10 @@
 
             </div>
         </div>
+
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+        <script src="js/jquery.scrollTo-1.4.3.1-min.js"></script>
+        <script src="js/main.js"></script>
 
 
     </body>
