Changed gisto references to codr

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8" />
-        <title>Gisto &middot; Snippets made awesome</title>
+        <title>Codr &middot; Snippets made awesome</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -30,7 +30,7 @@
         <header class="container">
             <div class="row">
                 <a href="/" class="threecol logo">
-                    <h1>&lt;/Gisto&gt;</h1>
+                    <h1>&lt;/Codr&gt;</h1>
                 </a>
                 <a href="#footer" class="threecol links">
                     About
@@ -49,7 +49,7 @@
             <div class="row">
                 <div class="sixcol">
                     <h1>Snippets made awesome</h1>
-                    <p>Gisto is a Cross-platform snippets management desktop application that allows you and your team share code snippets
+                    <p>Codr is a Cross-platform snippets management desktop application that allows you and your team share code snippets
                         fast and easily.</p>
                     <p>Based on GitHub Gists Infrastructure which means you can use all your existing snippets by
                         connecting your GitHub account!</p>
@@ -57,7 +57,7 @@
                 </div>
                 <div class="sixcol last">
                     <p>
-                        <img alt="Gisto" src="img/single-gist.png" />
+                        <img alt="Codr" src="img/single-gist.png" />
                     </p>
                 </div>
             </div>
@@ -67,7 +67,7 @@
             <div class="row">
                 <div class="twelvecol last">
                     <p>
-                        <b>Gisto</b> will soon be avaliable on: Windows, OSX and Linux
+                        <b>Codr</b> will soon be avaliable on: Windows, OSX and Linux
                     </p>
                 </div>
             </div>
@@ -82,14 +82,14 @@
                 <div class="sixcol">
                     <h1><i class="icon-github"></i> GitHub Integration</h1>
                     <p>
-                        Gisto works on GitHub infrastructure, everything you do at Gisto is automatically updated at GitHub.
+                        Codr works on GitHub infrastructure, everything you do at Codr is automatically updated at GitHub.
                     </p>
                     <p>
                         If you don't have access to your computer you can browse normally at GitHub to get all you need.
                     </p>
                 </div>
                 <div class="fourcol last">
-                    <img alt="Gisto" src="img/Octocat.png" />
+                    <img alt="Codr" src="img/Octocat.png" />
                 </div>
                 <div class="separator"></div>
             </div>
@@ -97,12 +97,12 @@
             <div class="row">
                 <div class="onecol"></div>
                 <div class="fourcol">
-                    <img alt="Gisto" alt="Gisto" src="img/tagging.png" />
+                    <img alt="Codr" alt="Codr" src="img/tagging.png" />
                 </div>
                 <div class="sixcol last">
                     <h1><i class="icon-tags"></i> Gist tagging</h1>
                     <p>
-                        Gisto allows to tag each gist with unlimited number of tags.
+                        Codr allows to tag each gist with unlimited number of tags.
                     </p>
                     <p>
                         Tags can be used for simply sorting gist snippets into groups for what makes it easy to search and maintain.
@@ -116,14 +116,14 @@
                 <div class="sixcol">
                     <h1><i class="icon-bolt"></i> Quick Editing</h1>
                     <p>
-                        Gisto contains rich code editors, for editing on the go just when you need that quick change and don't want to open your development environment.
+                        Codr contains rich code editors, for editing on the go just when you need that quick change and don't want to open your development environment.
                     </p>
                     <p>
-                        Drag and drop support for files right inside Gisto! just drag files to the application to create a gist.
+                        Drag and drop support for files right inside Codr! just drag files to the application to create a gist.
                     </p>
                 </div>
                 <div class="fourcol last">
-                    <img alt="Gisto" src="img/edit.png" />
+                    <img alt="Codr" src="img/edit.png" />
                 </div>
                 <div class="separator"></div>
             </div>
@@ -132,7 +132,7 @@
             <div class="row">
                 <div class="onecol"></div>
                 <div class="fourcol">
-                    <img alt="Gisto" src="img/offline.png" />
+                    <img alt="Codr" src="img/offline.png" />
                 </div>
                 <div class="sixcol last">
                     <h1><i class="icon-off"></i> Offline Access</h1>
@@ -140,7 +140,7 @@
                         Wanted to get a quick coding session done out of home and had no Internet connection available?
                     </p>
                     <p>
-                        Gisto enables you to view offline your gists so you can use them on the go.
+                        Codr enables you to view offline your gists so you can use them on the go.
                     </p>
                 </div>
                 <div class="separator"></div>
@@ -158,7 +158,7 @@
                     </p>
                 </div>
                 <div class="fourcol last">
-                    <img alt="Gisto" src="img/search.png" />
+                    <img alt="Codr" src="img/search.png" />
                 </div>
             </div>
 
@@ -169,16 +169,16 @@
             <div class="row">
                 <div class="sixcol">
                     <h1>Application status</h1>
-                    <p class="light" >Gisto is not yet officially released to the public.
+                    <p class="light" >Codr is not yet officially released to the public.
                         It is currently heavily developed. Various features will be left out from the first release.</p>
                     <p>We are planing to release the first version very soon and add new features as quickly as possible.</p>
                 </div>
                 <div class="sixcol last">
                     <h1>Who and why</h1>
-                    <p class="light" >Gisto started as an attempt to fulfill the lack of a syntax highlighted and cloud synchronized code snippet solution.</p>
+                    <p class="light" >Codr started as an attempt to fulfill the lack of a syntax highlighted and cloud synchronized code snippet solution.</p>
 
                     <p>
-                        Gisto is developed by a team of two web developers and uses web standard technologies such as HTML5 and JavaScript.
+                        Codr is developed by a team of two web developers and uses web standard technologies such as HTML5 and JavaScript.
                     </p>
                 </div>
             </div>
