--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8" />
-        <title>Gisto &middot; Snippets made awesome</title>
+        <title>Gisto | Cross-platform gist snippets management desktop application</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -21,6 +21,14 @@
         <!--css3-mediaqueries-js - http://code.google.com/p/css3-mediaqueries-js/ - Enables media queries in some unsupported browsers-->
         <script type="text/javascript" src="js/css3-mediaqueries.js"></script>
 
+        <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+        <script type="text/javascript">stLight.options({
+            publisher: "0bfe80cf-ecdb-4f12-894e-e5804d926c50",
+            doNotHash: false,
+            doNotCopy: false,
+            hashAddressBar: false,
+            shorten:false
+        });</script>
     </head>
 
 
@@ -49,7 +57,7 @@
             <div class="row">
                 <div class="sixcol">
                     <h1>Snippets made awesome</h1>
-                    <p>Gisto is a Cross-platform snippets management desktop application that allows you and your team share code snippets
+                    <p>Gisto is a Cross-platform gist snippets management desktop application that allows you and your team share code snippets
                         fast and easily.</p>
                     <p>Based on GitHub Gists Infrastructure which means you can use all your existing snippets by
                         connecting your GitHub account!</p>
@@ -72,6 +80,8 @@
 
                 </div>
             </div>
+
+
         </div>
 
         <div class="container horizontal">
@@ -85,8 +95,15 @@
         </div>
 
 
+
+
         <div class="container features" id="features">
 
+            <div class="container align-center">
+            <span class='st_twitter_hcount' displayText='Tweet' st_url="http://www.gistoapp.com" st_title="Gisto - Cross-platform gist snippets management desktop application #gistoapp"></span>
+            <span class='st_facebook_hcount' displayText='Facebook' st_title="Gisto - Cross-platform gist snippets management desktop application #gistoapp"></span>
+            <span class='st_googleplus_hcount' displayText='Google +' st_title="Gisto - Cross-platform gist snippets management desktop application #gistoapp"></span>
+            </div>
 
             <div class="row">
                 <div class="onecol"></div>
