--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 
     <head>
         <meta charset="utf-8" />
-        <title>Gisto | Cross-platform gist snippets management desktop application</title>
+        <title>Gisto | Snippets made awesome</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+        <meta name="description" content="Cross-platform gist snippets management desktop application that allows you and your team share code snippets fast and easily.">
+        <meta name="keywords" content="snippets,gist snippets,snippets management,gist snippets management">
         <!-- 1140px Grid styles for IE -->
         <!--[if lte IE 9]><link rel="stylesheet" href="css/ie.css" type="text/css" media="screen" /><![endif]-->
 
