Add link to git repo

--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
                         fast and easily.</p>
                     <p>Based on GitHub Gists Infrastructure which means you can use all your existing snippets by
                         connecting your GitHub account!</p>
-                    <a class="btn links" href="#footer">Learn more </a>
+                    <a class="btn links innsite" href="#footer">Learn more </a>
+                    <a class="btn links" href="https://github.com/Gisto/Gisto"><i class="icon-github-alt"></i> GitHub</a>
+                <br />
                 </div>
                 <div class="sixcol last">
 
